--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,8 +10,10 @@ services:
     restart: unless-stopped
     privileged: true
     devices:
-      - /dev/dri/card1:/dev/dri/card0
-      - /dev/dri/renderD129:/dev/dri/renderD128
+# if an arc is the second gpu, you dont have to edit plugins, if you leave it like this
+# else you can do - /dev/dri:/dev/dri
+      - /dev/dri/card1:/dev/dri/card0 # change as needed 
+      - /dev/dri/renderD129:/dev/dri/renderD128 # change as needed 
     network_mode: bridge
     ports:
       - 8265:8265 # webUI port
